<resources>
    <string name="app_name">WelcomeActivity</string>
    <string name="backgroundimage">backgroundimage</string>
    <string name="swooshlogo">swooshlogo</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="button">Button</string>
    <string name="search_league">Looking for a co-ed beginner league near you...</string>
</resources>
